최신파일 업로드

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rbfy(Rebuyforyou)</title>
+    <title>Rbfy</title>
+    <link rel="icon" href="./img/ico/ico_favicon.jpg" type="image/x-icon">
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -20,8 +21,15 @@
 <body>
     <div id="wrap">
         <div class="skip_event">
-            회원가입 시 50,000원 할인쿠폰 지급
-            <button class="btn_close">&times;</button>
+            <ul class="roller">
+                <li>회원가입 시 50,000원 할인쿠폰 지급</li>
+                <li>카톡 채널 추가 시 3,000원 할인쿠폰 증정</li>
+                <li>지금 가입하고 무료배송 쿠폰 받기</li>
+                <!-- 루프용 -->
+                <li>회원가입 시 50,000원 할인쿠폰 지급</li>
+                <li>카톡 채널 추가 시 3,000원 할인쿠폰 증정</li>
+                <li>지금 가입하고 무료배송 쿠폰 받기</li>
+            </ul>
         </div>
         <header>
             <h1 class="logo">
@@ -92,7 +100,7 @@
                         <a href="#">브랜드</a>
                         <div class="subMenu">
                             <ul>
-                                <li><a href="#">브랜드</a></li>
+                                <li><a href="./pages/rbfy_sub_story.html">스토리</a></li>
                                 <li><a href="#">제품철학</a></li>
                             </ul>
                         </div>
@@ -924,7 +932,83 @@
                 </ul>
             </div>
         </section>
-
+        <footer>
+            <div class="innerBox">
+                <div class="f_icon">
+                    <h1 class="logo">
+                        <a href="#">
+                            <span class="blind">rbfy 로고</span>
+                        </a>
+                    </h1>
+                    <ul class="f_sns">
+                        <li><a href=""><span class="blind">카카오톡</span></a></li>
+                        <li><a href=""><span class="blind">유튜브</span></a></li>
+                        <li><a href=""><span class="blind">인스타그램</span></a></li>
+                    </ul>
+                </div>
+                <ul class="f_menu">
+                    <li>
+                        <span class="f_title">
+                            Customer Center
+                        </span>
+                        <strong>1577-6722</strong>
+                        <dl>
+                            <dt>상담시간</dt><dd>평일 10:00 - 17:00</dd>
+                            <dt>점심시간</dt>
+                            <dd>
+                                <div>월~목 12:30 - 13:00</div>
+                                <div>금 12:30 - 14:00</div>
+                                <div>토,일,공휴일 휴무</div>
+                            </dd>
+                            <dt>제휴문의</dt> <dd>rbfy@hugcorp.co.kr</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <span class="f_title">
+                            Account
+                        </span>
+                        <p>예금주 (주)에이치유지</p>
+                        <p>기업 345-135410-04-051</p>
+                        <p>국민 760701-04-326818</p>
+                        <p>신한 140-014-236837</p>
+                    </li>
+                    <li>
+                        <span class="f_title">
+                            Shipping & Return Center
+                        </span>
+                        <p>경기도 화성시 팔탄면 월문리 55-20 3층</p>
+                        <p>에이치유지 앞</p>
+                    </li>
+                    <li>
+                        <span class="f_title">
+                            Shopping guide
+                        </span>
+                        <ul class="f_nav">
+                            <li><a href="#">공지사항</a></li>
+                            <li><a href="#">기업구매 문의</a></li>
+                            <li><a href="#">Q&A</a></li>
+                            <li><a href="#">리뷰</a></li>
+                            <li><a href="#">주문조회</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <button>Company Info</button>
+                <ul class="f_info">
+                   <li>주식회사 에이치유지</li> 
+                   <li>대표 : 황태환,박미연</li> 
+                   <li>사업자등록번호 : 375-81-00863</li> 
+                   <li>통신판매업 신고 : 2023-서울서초-0343</li> 
+                   <li>주소 : 06614 서울특별시 서초구 서초대로77길 17 (서초동) BLOCK77 11층 1호</li> 
+                   <li><a href="#">개인정보처리방침</a></li> 
+                   <li><a href="#">이용약관</a></li> 
+                   <li><a href="#">이용안내</a></li> 
+                   <li>개인정보보호책임자 : PARK SUNG YEON(rbfy@hugcorp.co.kr)</li> 
+                </ul>
+                <p class="copy">
+                    Copyright &copy; REBUYFORYOU.All Rights Reserved
+                </p>
+            </div>
+        </footer>
 
     </div>
 
