--- a/pages/rbfy_sub_story.html
+++ b/pages/rbfy_sub_story.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rbfy</title>
-    <link rel="icon" href="./img/ico/ico_favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/rbfy_sub.css">
-    <script src="./js/jquery-3.7.1.min.js"></script>
-    <script src="./js/sub_script.js" defer></script>
+    <link rel="icon" href="../img/ico/ico_favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/rbfy_sub.css">
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/sub_script.js" defer></script>
 
     <!-- swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
@@ -30,7 +30,7 @@
     </div>
     <header>
         <h1 class="logo">
-            <a href="./rbfy_main.html">
+            <a href="../index.html">
                 <span class="blind">rbfy 로고</span>
             </a>
         </h1>
@@ -119,17 +119,17 @@
         </nav>
         <!-- nav -->
         <div class="util_nav">
-            <a href="#"><img src="img/ico/ico_search_white.png" alt="검색"></a>
-            <a href="#"><img src="img/ico/ico_mypage_white.png" alt="마이페이지"></a>
-            <a href="#"><img src="img/ico/ico_cart_white.png" alt="장바구니"></a>
+            <a href="#"><img src="../img/ico/ico_search_white.png" alt="검색"></a>
+            <a href="#"><img src="../img/ico/ico_mypage_white.png" alt="마이페이지"></a>
+            <a href="#"><img src="../img/ico/ico_cart_white.png" alt="장바구니"></a>
         </div>
     </header>
     <div class="btnGoto">
         <div class="btnKakao">
-            <img src="img/ico/ico_kakao.png" alt="">
+            <img src="../img/ico/ico_kakao.png" alt="">
         </div>
         <div class="btnTop">
-            <img src="img/ico/ico_down.png" alt="">
+            <img src="../img/ico/ico_down.png" alt="">
         </div>
     </div>
     <main>
@@ -152,7 +152,7 @@
                 <ul class="splide__list timeline">
                     <li class="splide__slide card">
                         <figure>
-                            <img src="img/ico/ico_sub_his_01.svg" alt="">
+                            <img src="../img/ico/ico_sub_his_01.svg" alt="">
                         </figure>
                         <div class="card_text">
                             <h4>2016</h4>
@@ -163,7 +163,7 @@
                     </li>
                     <li class="splide__slide card">
                         <figure>
-                            <img src="img/ico/ico_sub_his_02.svg" alt="">
+                            <img src="../img/ico/ico_sub_his_02.svg" alt="">
                         </figure>
                         <div class="card_text">
                             <h4>2017</h4>
@@ -174,7 +174,7 @@
                     </li>
                     <li class="splide__slide card">
                         <figure>
-                            <img src="img/ico/ico_sub_his_03.svg" alt="">
+                            <img src="../img/ico/ico_sub_his_03.svg" alt="">
                         </figure>
                         <div class="card_text">
                             <h4>2019</h4>
@@ -185,7 +185,7 @@
                     </li>
                     <li class="splide__slide card">
                         <figure>
-                            <img src="img/ico/ico_sub_his_04.svg" alt="">
+                            <img src="../img/ico/ico_sub_his_04.svg" alt="">
                         </figure>
                         <div class="card_text">
                             <h4>2020</h4>
@@ -196,7 +196,7 @@
                     </li>
                     <li class="splide__slide card">
                         <figure>
-                            <img src="img/ico/ico_sub_his_05.svg" alt="">
+                            <img src="../img/ico/ico_sub_his_05.svg" alt="">
                         </figure>
                         <div class="card_text">
                             <h4>2021</h4>
@@ -207,7 +207,7 @@
                     </li>
                     <li class="splide__slide card">
                         <figure>
-                            <img src="img/ico/ico_sub_his_06.svg" alt="">
+                            <img src="../img/ico/ico_sub_his_06.svg" alt="">
                         </figure>
                         <div class="card_text">
                             <h4>2022</h4>
@@ -218,7 +218,7 @@
                     </li>
                     <li class="splide__slide card">
                         <figure>
-                            <img src="img/ico/ico_sub_his_07.svg" alt="">
+                            <img src="../img/ico/ico_sub_his_07.svg" alt="">
                         </figure>
                         <div class="card_text">
                             <h4>2023</h4>
@@ -245,31 +245,31 @@
             <p>리바이포유가 소중한 당신의 삶에 늘 함꼐 합니다.</p>
             <div class="life_cont">
                 <div class="imgWrap">
-                    <img src="img/img_sub_bslife01.jpg" alt="">
+                    <img src="../img/img_sub_bslife01.jpg" alt="">
                 </div>
                 <div class="imgWrap">
-                    <img src="img/img_sub_bslife02.jpg" alt="">
+                    <img src="../img/img_sub_bslife02.jpg" alt="">
                 </div>
                 <div class="imgWrap">
-                    <img src="img/img_sub_bslife03.jpg" alt="">
+                    <img src="../img/img_sub_bslife03.jpg" alt="">
                 </div>
                 <div class="imgWrap">
-                    <img src="img/img_sub_bslife04.jpg" alt="">
+                    <img src="../img/img_sub_bslife04.jpg" alt="">
                 </div>
                 <div class="imgWrap">
-                    <img src="img/img_sub_bslife05.jpg" alt="">
+                    <img src="../img/img_sub_bslife05.jpg" alt="">
                 </div>
                 <div class="life_midArea">
-                    <img src="img/img_sub_bslife_mid.png" alt="">
+                    <img src="../img/img_sub_bslife_mid.png" alt="">
                 </div>
                 <div class="imgWrap">
-                    <img src="img/img_sub_bslife06.jpg" alt="">
+                    <img src="../img/img_sub_bslife06.jpg" alt="">
                 </div>
                 <div class="imgWrap">
-                    <img src="img/img_sub_bslife07.jpg" alt="">
+                    <img src="../img/img_sub_bslife07.jpg" alt="">
                 </div>
                 <div class="imgWrap">
-                    <img src="img/img_sub_bslife08.jpg" alt="">
+                    <img src="../img/img_sub_bslife08.jpg" alt="">
                 </div>
             </div>
         </div>
